# oi-userland

./: .gitignore  .hgtags  .travis.yml  Dangerfile  Jenkinsfile  Makefile  README  README.md  SECURITY.md  Vagrantfile  site-is-down
.github/: stale.yml
ci/: encumbered-build.groovy  illumos-gate-build.groovy  pr-builder.groovy  user-build.groovy
components/: Makefile  Makefile.component  TESTS  components.ignore  components.whitelist  gfortran-4-runtime.p5m
components/ConsoleKit/: Makefile  consolekit.p5m  pam-consolekit.p5m
components/GConf/: Makefile  gconf.p5m
components/ORBit2/: Makefile
components/inputmethod/imf-selector/src/: AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  imf-selector.desktop.in
components/inputmethod/imf-selector/src/data/: 0210.im  Makefile.am  Makefile.in
components/inputmethod/imf-selector/src/help/: Makefile.am  Makefile.in
components/inputmethod/imf-selector/src/help/C/: Makefile.am  Makefile.in  imf-selector-C.omf  imf-selector.xml
components/inputmethod/imf-selector/src/po/: POTFILES.in  de.po  es.po  fr.po  it.po  ja.po  ko.po  missing  pt_BR.po  zh_CN.po  zh_TW.po
components/inputmethod/imf-selector/src/src/: Makefile.am  Makefile.in  imf-selector  imf-selector.py
components/inputmethod/imf-selector/src/src/icons/: Makefile.am
components/x11/libX11/srcs/modules/lc/gb18030/: Makefile.am  lcGB18030.c
components/x11/xf86-video-intel/xf86-video-intel-2.99.917/tools/: Makefile.am
doc/: best-practices.md  branchid-change-instructions.md  building-and-packaging-faq.md  builidng-and-packaging-faq.md  categories-layout.md  classification.md  current-tasks.md  gate-mechanics.txt  incremental-builds.md  makefile-targets.txt  makefile-variables.txt  migrating-from-on.txt  packaging.txt  reserved_uids_and_gids.md  testing.txt  userland-tools.md  vagrant.md
exception_lists/: cddlchk  cdm  copyright  permchk
incorporations/: Makefile
licenses/: FDLv1.2  FDLv1.3  evaluation
make-rules/: ant.mk  attpackagemake.mk  build-zone.mk  cmake.mk  common-32.mk  common-32_and_64.mk  common-64.mk  common-lisp.mk  common-no_arch.mk  common.mk  component-report  component.mk  configure-32.mk  configure-32_and_64.mk  configure-64.mk  configure-no_arch.mk  configure.mk  cp-install.mk  depend.mk  encumbered.mk  environment.mk  font.mk  gcc-component.mk  gem.mk  gnome-component.mk  gnome.mk  gnu-component.mk  history.mk  install.rb.mk  intltool.mk  ips-buildinfo.mk  ips.mk  justmake.mk  lint-libraries.mk  makemaker-defaults.mk  makemaker.mk  mate.mk  meson.mk  modulebuild-defaults.mk  modulebuild.mk  (+27 more)
spec-files/: .pkgtoolrc  lcms.spec  less.spec
templates/: ant.mk  cmake.mk  configure.mk  justmake.mk  perl.mk  python.mk  ruby.mk
tools/: Makefile  bass-o-matic  bass-o-matic.py  build-watch.d  build-watch.pl  cloney  component-translate  fetch.py  gen-components  generate-history  generate_font_metadata.pl  ips2tgz  jenkinshelper-main.ksh  jenkinshelper.ksh  license-detector  man-stability  mfstyle  perl-integrate-module  perl-license  perl-meta-deps  perl-version-convert  pkglint.sh  pkglintrc  proxy_cvs.sh  python-integrate-project  python-requires  python-resolve-deps  runtime-perl.p5m  runtime-ruby.p5m  sc_profile.xml  sunw-history-package  time.c  userland-bump  userland-component  userland-deprecate  userland-fetch  userland-incorporator  userland-mangler  userland-mapping  userland-unpack  (+2 more)
transforms/: PRINT_COMPONENT_FMRIS  REQUIRED_PACKAGES  actuators  archive-libraries-drop  autopyc  comparison-cleanup  copyright-template  defaults  depends  devel  docs  drop-all  drop-unresolved-dependencies  drop-variant.arch  evaluation  final-cleanup  generate-cleanup  gnome-incorporation  group-dependency  ignore-gcc-usr-lib  ignore-libs  incorporate  libtool-drop  license-changes  locale  manifest-metadata-template  mkgeneric  perl  pre-release  print-consolidation-depend  print-depend-require  print-paths  print-pkgs  publish-cleanup  puppet  python  python-3-groups  python-3-metadata  python-3-no-32bit  python-3-soabi  (+9 more)
(+39901 files in other folders)
